@@ -28,6 +28,7 @@ all:
 include $(top_srcdir)/share/make/basepkg.mk
 
 ## Note that R_COMPILER_SUPPRESS_ALL is now on by default
+## What on Unix is R_SYSTEM_ABI is hard-coded in R/sotools.R
 $(top_builddir)/library/$(pkg)/R/$(pkg).rdb: all.R $(top_srcdir)/share/licenses/license.db
 	@$(ECHO) "byte-compiling package '$(pkg)'"
 	@$(INSTALL_DATA) all.R $(top_builddir)/library/$(pkg)/R/$(pkg)
